--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,83 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/bae75bb48f.js"></script>
+    <meta name="theme-color" content="#333" />
   </head>
-
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg ">
+      <%=link_to "Cafeteria Manager",root_path,class:"navbar-brand" %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <form class="form-inline my-2 ">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </li>
+          <% if @current_user  %>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Account
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <%=link_to "Profile", user_path(:id =>session[:current_user_id]),method:"get",class:"dropdown-item" %>
+                <% if @current_user.is_owner? || @current_user.is_clerk? %>
+                  <%=link_to "Pending Orders", pending_orders_path,method:"get",class:"dropdown-item" %>
+                  <% if @current_user.is_owner?%>
+                    <%=link_to "All Orders", all_orders_path,class:"dropdown-item" %>
+                    <div class="dropdown-divider"></div>
+                    <%=link_to "Clerks", users_path(:role=>"Clerk"),method:"get",class:"dropdown-item" %>
+                    <%=link_to "Users", users_path(:role=>"Customer"),method:"get",class:"dropdown-item" %>
+                  <% end %>
+                <% end %>
+              </div>
+            </li>
+            <% if !@current_user.is_owner?  %>
+              <li class="nav-item">
+                <li><%=link_to "My Orders", all_orders_path(:id=>session[:current_user_id]),class:"nav-link" %></li>
+              </li>
+              <% if !@current_user.is_clerk? %>
+                <li class="nav-item">
+                  <%=link_to "Pending Orders", pending_orders_path(:id=>session[:current_user_id]),class:"nav-link" %>
+                </li>
+              <% end %>
+              <li class="nav-item">
+                <li><%=link_to "Cart", cart_items_path,method: :get,class:"nav-link" %></li>
+              </li>
+            <% end %>
+            <li class="nav-item">
+              <li><%=link_to "Sign-Out", destroy_session_path,method: "delete",class:"nav-link SignOut" %></li>
+            </li>
+          <% else %>
+            <%=render partial: "home/home_index"%>
+          <%end%>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <% if @current_user  %>
+        <h1 class="UserHeader">
+          Welcome <span><%=@current_user.first_name.capitalize%></span>
+        </h1>
+      <% end %>
+      <% if flash[:error] %>
+        <div class="alert alert-warning">
+          <p class="FlashError"><%=flash[:error]%></p>
+        </div>
+      <%end%>
+      <%= yield %>
+    </div>
   </body>
 </html>
