--- a/app/views/home/_home_index.html.erb
+++ b/app/views/home/_home_index.html.erb
@@ -1,6 +1,6 @@
 <li class="nav-item">
-  <li><%=link_to "SignIn", new_sessions_path,class:"nav-link" %></li>
+  <li><%=link_to "SignIn", new_sessions_path,class:"nav-link butn" %></li>
 </li>
 <li class="nav-item">
-  <li><%=link_to "SignUp", new_user_path,class:"nav-link" %></li>
+  <li><%=link_to "SignUp", new_user_path,class:"nav-link butn" %></li>
 </li>
