--- a/app/views/menu_categories/_menu_category-section.html.erb
+++ b/app/views/menu_categories/_menu_category-section.html.erb
@@ -1,38 +1,21 @@
 <div class="container">
-  <section class="MenuCategorySection">
-    <section class="MenuCategorySection-Title">
-    </section>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Menu Category</th>
-          <% if @current_user.is_owner? ||  @current_user.is_clerk? %>
-            <th>Status</th>
-            <% if @current_user.is_owner?%>
-              <th>Edit</th>
-              <th>Delete</th>
-            <% end %>
-          <% end %>
-        </tr>
-      </thead>
-      <tbody>
-        <%menu_categories.all.each do |menu_category|%>
-          <tr class="Category">
-            <td ><%= link_to "#{menu_category.menu_category_name}",menu_items_path(menu_category_id:menu_category.id)%></td>
-            <% if @current_user.is_owner? ||  @current_user.is_clerk? %>
-              <td ><%=section_title %></td>
-              <% if @current_user.is_owner?%>
-                <td><%= link_to "Edit",edit_menu_category_path(menu_category.id)%></td>
-                <td>
-                  <%=form_with(url:"/menu_categories/#{menu_category.id}",method:"delete") do%>
-                    <%=image_submit_tag "trashcan.svg" %>
-                  <%end%>
-                </td>
-              <% end %>
+  <div class="row ">
+    <%menu_categories.all.each do |menu_category|%>
+      <div class="card" >
+        <div class="card-img-top"></div>
+        <div class="card-body">
+          <h4 class="CategoryName"><%="#{menu_category.menu_category_name}"%></h4>
+          <%= link_to "<button class='card_checkout_btn view'>View</button>".html_safe,menu_items_path(menu_category_id:menu_category.id)%>
+        </div>
+        <% if @current_user.is_owner?%>
+          <div class="menu_footer">
+            <h6><%=link_to "<button class='card_checkout_btn'>Edit</button>".html_safe,edit_menu_category_path(menu_category.id)%></h6>
+            <%=form_with(url:"/menu_categories/#{menu_category.id}",method:"delete") do%>
+              <%=submit_tag nil,class:"card_checkout_btn",value:"Delete"%>
             <%end%>
-          </tr>
-        <%end%>
-      </tbody>
-    </table>
-  </section>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
