--- a/app/views/orders/_order_item_section.html.erb
+++ b/app/views/orders/_order_item_section.html.erb
@@ -1,28 +1,34 @@
-<div class="container">
-  <div class="Side">
-    <h1><%= section_title %></h1>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Price</th>
-          <th>Quantities</th>
-          <th>Total Price</th>
+<div>
+  <h4><%= section_title %></h4>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Quantities</th>
+        <th>Total Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% order_items=@order.order_items %>
+      <% order_items.each do |order_item|%>
+        <tr class="Item">
+          <td class="OrderItem"><%= order_item.menu_item_name%></td>
+          <td class="OrderItem"><%= order_item.menu_item_price%></td>
+          <td class="OrderItem">
+            <span class="Order-Item"><%= order_item.quantity %></span>
+          </td>
+          <td class="OrderItem"><%= order_item.total%></td>
         </tr>
-      </thead>
-      <tbody>
-        <% order_items=@order.order_items %>
-        <% order_items.each do |order_item|%>
-          <tr class="Item">
-            <td class="OrderItem"><%= order_item.menu_item_name%></td>
-            <td class="OrderItem"><%= order_item.menu_item_price%></td>
-            <td class="OrderItem">
-              <span class="Order-Item"><%= order_item.quantity %></span>
-            </td>
-            <td class="OrderItem"><%= order_item.total%></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+      <% end %>
+    </tbody>
+  </table>
+  <div class="Total">
+    <div>
+      <h5><strong>Total:</strong></h5>
+    </div>
+    <div >
+      <h5><strong> <%= @order.total_price %> </strong></h5>
+    </div>
   </div>
 </div>
