--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,28 +1,45 @@
-<div class="container">
-  <h4 class="SignOut"><%= link_to 'Cancel Order', destroy_order_path(:id =>@order.id),  method: :delete, data: { confirm: 'Are you sure?' } %></h4>
-  <h5 class="Back-Button"><%= link_to "Back",menu_categories_path,method: :get %> </h5>
-  <% if @order.paid %>
-    <h1>Order Created</h1>
-    <h2>Your Order Id:</h2>
-    <span>
-      <h4><%= @order.id %></h4>
-    </span>
-    <h2>Name</h2>
-    <span>
-      <h4><%=  User.find(Order.find(@order.id).user_id).first_name %></h4>
-    </span>
-    <h2>Your Address:</h2>
-    <span>
-      <h4><%=  User.find(Order.find(@order.id).user_id).address %></h4>
-    </span>
-    <h2>Your Phone Number:</h2>
-    <span>
-      <h4><%=  User.find(Order.find(@order.id).user_id).phone_number %></h4>
-    </span>
-  <% end %>
-  <h2>Your Order Total Price:</h2>
-  <span>
-    <h4><%= @order.total_price %></h4>
-  </span>
-  <div><%=render partial:"order_item_section", locals: {section_title: "Order Items",order:@order }%></div>
-</div>
+<div class="container-fluid">
+  <div id="ui-view" data-select2-id="ui-view">
+    <div>
+      <div class="cardOrder">
+        <div class="cardOrder-header">Invoice:
+          <strong><%= @order.id %></strong>
+          <% if @order.delivered_at != "Canceled" && @order.pending  %>
+            <%=link_to "Cancel",cancel_order_path(id:@order.id),class:"btn btn-sm btn-info float-right mr-1 d-print-none"%>
+          <% else %>
+            <a class="btn btn-sm btn-secondary float-right mr-1 d-print-none" href="#" data-abc="true"> Delivered:
+              <%=  @order.delivered_at %></a>
+          <% end %>
+          <a class="btn btn-sm btn-secondary float-right mr-1 d-print-none" href="#" data-abc="true">
+            <i class="fa fa-print"></i> Print</a>
+        </div>
+        <div class="card-body">
+          <div class="row mb-2 order">
+            <div class="col-sm-6 order_sec">
+              <h6 class="mb-3"><strong>Shipping Address:</strong></h6>
+              <div><%=  User.find(Order.find(@order.id).user_id).address %></div>
+            </div>
+            <div class="col-sm-6 order_sec">
+              <h6 class="mb-3"><strong>Billing Address:</strong></h6>
+              <div><%=  User.find(Order.find(@order.id).user_id).address %></div>
+            </div>
+            <div class="col-sm-6 order_sec">
+              <h6 class="mb-3">Details:</h6>
+              <div>Name:
+                <strong><%=  User.find(Order.find(@order.id).user_id).first_name %></strong>
+              </div>
+              <div>Email:
+                <strong><%=  User.find(Order.find(@order.id).user_id).email %></strong>
+              </div>
+              <div>Phone Number:
+                <strong><%=  User.find(Order.find(@order.id).user_id).phone_number %></strong>
+              </div>
+            </div>
+          </div>
+          <div class="table-responsive-sm order_item">
+            <%=render partial:"order_item_section", locals: {section_title: "Order Items",order:@order }%>
+          </div>
+          <div class="cardOrder"></div>
+        </div>
+      </div>
+    </div>
