--- a/app/assets/stylesheets/cart.css
+++ b/app/assets/stylesheets/cart.css
@@ -7,7 +7,7 @@
     height:auto;
     background: #fafafa;
     padding: 10px;
-    box-shadow: 0px 4px 12px -5px rgb(0 0 0 / 30%);
+    box-shadow: 0px 4px 12px -5px rgb(0, 0, 0 / 30%);
     overflow: auto;
     border-radius: 10px;
     position: fixed;
@@ -27,7 +27,7 @@
     background: #fff;
     border-radius: 10px;
     height: calc(100% - 43px);
-    box-shadow: 0px 1px 10px -5px rgb(0 0 0 / 30%);
+    box-shadow: 0px 1px 10px -5px rgb(0, 0 ,0 / 30%);
 	  margin-bottom: 60px;
 }
 .food_img
