--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -190,7 +190,7 @@ display: flex;
 
 .clearfix{
   flex: 1;
-  background-image: url("../assets/homepage.jpg");
+  background-image: url(https://images.unsplash.com/photo-1514933651103-005eec06c04b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1934&q=80);
     background-size: 139% auto;
 }
 
