--- a/app/assets/stylesheets/cart.css
+++ b/app/assets/stylesheets/cart.css
@@ -4,7 +4,7 @@
   margin-top:30px ;
   border: 1px solid #0000000d;
     width: 350px;
-    height:auto;
+    height:350px;
     background: #fafafa;
     padding: 10px;
     box-shadow: 0px 4px 12px -5px rgb(0, 0, 0 / 30%);
@@ -15,7 +15,7 @@
 }
 .cart_title
 {
-	    font-size: 18px;
+	  font-size: 18px;
     font-weight: 600;
     letter-spacing: 1px;
     line-height: 28px;
