--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <div class="main ">
   <div class="row ">
+    <p class="Back-Button"><%= link_to 'Back', 'javascript:history.back()' %> </p>
     <div class="col-lg-12 shos shadow-lg">
       <div class="title"> <b>Personal Details:</b> </div>
       <div class="details">
