--- a/app/views/menu_items/edit.html.erb
+++ b/app/views/menu_items/edit.html.erb
@@ -1,14 +1,41 @@
-<div class="container">
+<div class="container mt-5">
   <%menu_item = MenuItem.find(params[:id]) %>
-  <%=form_with(url:"/menu_items/#{menu_item.id}" ,method:"put",class:"MenuCategoryAdd") do%>
-    <%=text_field_tag "name",nil,value:menu_item.name,class:"MenuItemUpdate-Text",placeholder:"Enter New MenuItem Name",autofocus: true %>
-    <%=text_field_tag "description",nil,value:menu_item.description,class:"MenuItemUpdate-Description",placeholder:"Enter Description",autofocus: true %>
-    <%=number_field_tag "price",nil, value:menu_item.price,step: :any ,class:"MenuItemUpdate-Price",placeholder:"Enter New Price",autofocus: true %>
-    <p>Status:</p>
-    <%[true,false].each do |status|%>
-      <%= radio_button_tag "status",status,value:menu_item.status %>
-      <%= label_tag " #{status}" %>
-    <% end %>
-    <%=submit_tag nil,class:"MenuItemUpdate-Button",value:"Update"%>
+  <p class="Back-Button"><%= link_to 'Back', 'javascript:history.back()' %> </p>
+  <h4>MenuItem Edit:</h4>
+  <%=form_with(url:"/menu_items/#{menu_item.id}" ,method:"put",class:"EditMenu") do%>
+    <div class="Form-Section">
+      <div class="Form-Section-Label">
+        <span class="Form-Section-Label-Icon">
+          <i class="fas fa-utensils"></i>
+        </span>
+      </div>
+      <%=text_field_tag "name",nil,value:menu_item.name,class:"MenuItemUpdate-Text",placeholder:"Enter New MenuItem Name",autofocus: true %>
+    </div>
+    <div class="Form-Section">
+      <div class="Form-Section-Label">
+        <span class="Form-Section-Label-Icon">
+          <i class="fas fa-utensils"></i>
+        </span>
+      </div>
+      <%=text_field_tag "description",nil,value:menu_item.description,class:"MenuItemUpdate-Description",placeholder:"Enter Description",autofocus: true %>
+    </div>
+    <div class="Form-Section">
+      <div class="Form-Section-Label">
+        <span class="Form-Section-Label-Icon">
+          <i class="fas fa-utensils"></i>
+        </span>
+      </div>
+      <%=number_field_tag "price",nil, value:menu_item.price,step: :any ,class:"MenuItemUpdate-Price",placeholder:"Enter New Price",autofocus: true %>
+    </div>
+    <div class="Form-Section">
+      <div class="Form-Section-Label">
+        <p>Status:</p>
+        <%[true,false].each do |status|%>
+          <%= radio_button_tag "status",status,value:menu_item.status %>
+          <%= label_tag " #{status}" %>
+        <% end %>
+      </div>
+    </div>
+    <%=submit_tag nil,class:"edit float-right",value:"Update"%>
   <%end%>
 </div>
