--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,22 +1,34 @@
-<h1>Reset Password</h1>
-<%= form_for @user, :url => password_reset_path(params[:id]) do |f| %>
-  <% if @user.errors.any? %>
-    <div class='error_messages'>
-      <h2>Form is invalid</h2>
-      <ul>
-        <% for message in @user.errors.full_messages %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+<div class="container mt-5">
+  <h1>Reset Password</h1>
+  <%= form_for @user, :url => password_reset_path(params[:id]) do |f| %>
+    <% if @user.errors.any? %>
+      <div class='error_messages'>
+        <h2>Form is invalid</h2>
+        <ul>
+          <% for message in @user.errors.full_messages %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <div class="Form-Section">
+      <div class="Form-Section-Label">
+        <span class="Form-Section-Label-Icon">
+          <i class="fas fa-key"></i>
+        </span>
+      </div>
+      <%= f.password_field :password,class:"Form-Input",placeholder:"Enter Password"%>
+    </div>
+    <div class="Form-Section">
+      <div class="Form-Section-Label">
+        <span class="Form-Section-Label-Icon">
+          <i class="fas fa-key"></i>
+        </span>
+      </div>
+      <%= f.password_field :password_confirmation,class:"Form-Input",placeholder:"Confirm Password"%>
+    </div>
+    <div class="actions">
+      <%=f.submit 'Update' ,class:"Form-Submit"%>
     </div>
   <% end %>
-  <div class='field'>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-  <div class='field'>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class='actions'><%= f.submit 'Update password' %></div>
-<% end %>
+</div>
