--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card-header">
-    <h5>Welcome NewUser</h5>
+    <h5>SignUp NewUser</h5>
   </div>
   <div class="NewUser">
     <%= form_with url:users_path do |form| %>
@@ -9,7 +9,9 @@
   </div>
   <div class="Card-Footer">
     <div class="Card-Footer-Content">
-      Already have an account? <%=link_to "SignIn", new_sessions_path%>
+      <% if !@current_user %>
+        Already have an account? <%=link_to "SignIn", new_sessions_path%>
+      <%end%>
     </div>
   </div>
 </div>
